fix: skills__section grid on mobiles

--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -1,10 +1,11 @@
 .header {
     margin: 0 auto;
-    max-width: $desktop;
+    max-width: calc(1184px + 3rem);
     width: 100%;
-    @media(max-width: 1400px) {
-        padding: 0 3rem;
-    }
+    padding: 0 3rem 80px;
+    // @media(max-width: 1400px) {
+    //     padding: 0 0 80px;
+    // }
     @media(max-width: $mobile) {
         padding: 0 1rem 1rem;
         // height: 100vh;
