--- a/src/scss/modules/_skills.scss
+++ b/src/scss/modules/_skills.scss
@@ -1,8 +1,8 @@
 .skills {
     margin: 0 auto;
-    max-width: $desktop;
+    max-width: calc(1184px + 3rem);
     width: 100%;
-    padding: 200px 0 136px;
+    padding: 120px 3rem 136px;
     &__heading {
         font-weight: 600;
         font-size: 2.25rem;
@@ -65,18 +65,18 @@
         margin: 0;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
         grid-gap: 22px;
         list-style: none;
-        @media(max-width: $desktop) {
-            grid-template-columns: 1fr;
-            grid-gap: 0.5rem;
-            padding-left: 0;
-        }
+        // @media(max-width: $desktop) {
+        //     grid-template-columns: 1fr;
+        //     grid-gap: 0.5rem;
+        //     padding-left: 0;
+        // }
     }
-    @media(max-width: 1400px) {
-        padding: 200px 3rem 176px;
-    }
+    // @media(max-width: 1400px) {
+    //     padding: 200px 3rem 176px;
+    // }
     @media(max-width: $mobile) {
         padding: 120px 1rem 80px;
     }
@@ -89,7 +89,7 @@
         // &--want-to-learn {
         //     padding-top: 48px;
         // }
-        @media(max-width: $desktop) {
+        @media(max-width: 900px) {
             grid-template-columns: repeat(1, 1fr);
             // flex-direction: column;
             // justify-content: flex-start;
@@ -111,9 +111,9 @@
             width: 5rem;
             height: 0.25rem;
             background-color: $green;
-            @media(max-width: $desktop) {
-                top: -1rem;
-            }
+            // @media(max-width: $desktop) {
+            //     top: -1rem;
+            // }
             @media(max-width: $mobile) {
                 width: 2.5rem;
             }
@@ -129,11 +129,11 @@
                 background-color: $blue;
             }
         }
-        @media(max-width: $desktop) {
-            min-width: 0;
-            max-width: 379px;
-            width: 100%;
-        }
+        // @media(max-width: $desktop) {
+        //     min-width: 0;
+        //     max-width: 379px;
+        //     width: 100%;
+        // }
         @media(max-width: $mobile) {
             margin-bottom: 0;
             font-size: 22px;
